# uqr_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: AVStatus.msg  CmdVel.msg  ConePair.msg  DepthImage.msg  HardwareDemand.msg  HomeMotor.msg  Map.msg  NNConeDetection.msg  NNConeDetections.msg  PPUnknownDebug.msg  Perception.msg  Rect2D.msg  Safety.msg  VAMSoundRequest.msg  VehicleCmdVel.msg  VehicleSafety.msg
src/msg/: Cone3D.msg  DepthImage.msg  PPUnknownDebug.msg  Rect2D.msg  VAMSoundRequest.msg
