<?xml version="1.0"?>
<package format="2">
  <name>uqr_msgs</name>
  <version>0.0.0</version>
  <description>Package for messages used by the UQR AV</description>

  <author email="m.young2@uqconnect.edu.au">Matt Young</author>
  <maintainer email="m.young2@uqconnect.edu.au">Matt Young</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--<build_depend>octomap_msgs</build_depend>--> <!-- dunno what this is, she'll be right -->
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>message_runtime</exec_depend>
</package>