<?xml version="1.0"?>
<package format="3">
  <name>uqr_msgs</name>
  <version>0.0.0</version>
  <description>Package for messages used by the UQR AV</description>

  <author email="m.young2@uqconnect.edu.au">Matt Young</author>
  <maintainer email="m.young2@uqconnect.edu.au">Matt Young</maintainer>

  <license>Mozilla Public License v2.0</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
